--- a/LLM_finetuning.ipynb
+++ b/LLM_finetuning.ipynb
@@ -91,11 +91,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9236e9d1-e75e-4089-9a4d-27421521cfd5",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -104,12 +100,12 @@
     "\n",
     "!echo \"Installation in progress, please wait...\"\n",
     "!{sys.executable} -m pip cache purge > /dev/null\n",
-    "!{sys.executable} -m pip install --pre bigdl-llm[xpu]==2.4.0b20231116 --no-warn-script-location -f https://developer.intel.com/ipex-whl-stable-xpu > /dev/null\n",
-    "!{sys.executable} -m pip install peft==0.5.0 --no-deps > /dev/null\n",
-    "!{sys.executable} -m pip install accelerate==0.23.0 --no-deps --no-warn-script-location > /dev/null\n",
-    "!{sys.executable} -m pip install  transformers==4.34.0 --no-warn-script-location > /dev/null \n",
-    "!{sys.executable} -m pip install datasets==2.15 --no-warn-script-location > /dev/null 2>&1 \n",
-    "!{sys.executable} -m pip install fsspec==2023.9.2 > /dev/null  2>&1\n",
+    "!{sys.executable} -m pip install --pre --upgrade \"bigdl-llm[xpu]==2.5.0b20240318\" -f https://developer.intel.com/ipex-whl-stable-xpu\n",
+    "!{sys.executable} -m pip install \"peft==0.5.0\"  #> /dev/null\n",
+    "!{sys.executable} -m pip install \"accelerate==0.23.0\" --no-warn-script-location #> /dev/null\n",
+    "!{sys.executable} -m pip install \"transformers==4.34.0\" --no-warn-script-location #> /dev/null \n",
+    "!{sys.executable} -m pip install \"datasets==2.14.6\" --no-warn-script-location #> /dev/null 2>&1 \n",
+    "!{sys.executable} -m pip install \"bitsandbytes==0.43.0\" \"scipy==1.12.0\" #> /dev/null  2>&1\n",
     "!echo \"Installation completed.\"\n",
     "\n",
     "def get_python_version():\n",
@@ -131,18 +127,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "31eb9cf2-abcf-48f8-918b-37a18f85ac7c",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
     "import os\n",
-    "import sys\n",
-    "from math import ceil\n",
-    "from typing import Optional, Tuple\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings(\n",
@@ -151,8 +140,13 @@
     "warnings.filterwarnings(\n",
     "    \"ignore\", category=UserWarning, module=\"torchvision.io.image\", lineno=13\n",
     ")\n",
-    "warnings.filterwarnings(\"ignore\", message=\"You are using the default legacy behaviour\")\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning, message=\".*Parameter.*\")\n",
+    "warnings.filterwarnings(\n",
+    "    \"ignore\",\n",
+    "    message=\"The installed version of bitsandbytes was compiled without GPU support.*\",\n",
+    "    category=UserWarning,\n",
+    "    module='bitsandbytes.cextension'\n",
+    ")\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "warnings.filterwarnings(\n",
     "    \"ignore\",\n",
     "    category=FutureWarning,\n",
@@ -160,6 +154,9 @@
     ")\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
     "os.environ[\"NUMEXPR_MAX_THREADS\"] = \"28\"\n",
+    "os.environ[\"ENABLE_SDP_FUSION\"] = \"true\"\n",
+    "os.environ[\"SYCL_PI_LEVEL_ZERO_USE_IMMEDIATE_COMMANDLISTS\"]=\"1\"\n",
+    "\n",
     "logging.getLogger(\"transformers\").setLevel(logging.ERROR)\n",
     "logging.getLogger(\"bigdl\").setLevel(logging.ERROR)\n",
     "\n",
@@ -177,6 +174,7 @@
     "from bigdl.llm.transformers.qlora import PeftModel\n",
     "import transformers\n",
     "from transformers import (\n",
+    "    BitsAndBytesConfig,\n",
     "    DataCollatorForSeq2Seq,\n",
     "    LlamaTokenizer,\n",
     "    AutoTokenizer,\n",
@@ -266,11 +264,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "88077cc2-8fcf-4128-ac44-9fb2bb327398",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "BASE_MODELS = {\n",
@@ -324,11 +318,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d8ecd7df-b7ce-48b0-ba9f-04b7ec0c1cf4",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generate_prompt_sql(input_question, context, output=\"\"):\n",
@@ -366,64 +356,49 @@
     "\n",
     "**Model Loading and Configuration**\n",
     "\n",
-    "Initializing the `FineTuner`, we load the base model using `base_model_id`. Key to this setup is the `load_in_low_bit` option, using [BigDL library](https://bigdl.readthedocs.io/en/latest/) to load the model in a 4-bit format (\"nf4\"). This approach significantly cuts down on memory. Additionally, we configure the LoRA adapters for mixed-precision training with `torch.float16`.\n"
+    "Initializing the `FineTuner`, we load the base model using `base_model_id`. Key to this setup is the ` bnb_4bit_quant_type=\"nf4\"` option, using bitsandbytes library, checkout [BigDL library](https://bigdl.readthedocs.io/en/latest/) for more information on this. This approach significantly cuts down on memory. Additionally, we configure the LoRA adapters for mixed-precision training with `torch.float16`.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "aeab82dc",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def setup_model_and_tokenizer(base_model_id: str):\n",
-    "    \"\"\"Downloads / Loads the pre-trained model in NF4 datatype and tokenizer based on the given base model ID for training.\"\"\"\n",
+    "    \"\"\"Downloads / Loads the pre-trained model and tokenizer based on the given base model ID for training, \n",
+    "    with fallbacks for permission errors to use default cache.\"\"\"\n",
     "    local_model_id = base_model_id.replace(\"/\", \"--\")\n",
     "    local_model_path = os.path.join(MODEL_CACHE_PATH, local_model_id)\n",
-    "    print(f\"local model path is: {local_model_path}\")\n",
     "\n",
+    "    bnb_config = BitsAndBytesConfig(\n",
+    "        load_in_4bit=True,\n",
+    "        bnb_4bit_use_double_quant=False,\n",
+    "        bnb_4bit_quant_type=\"nf4\",\n",
+    "        bnb_4bit_compute_dtype=torch.bfloat16\n",
+    "    )\n",
     "    try:\n",
+    "        print(f\"Attempting to load model and tokenizer from: {local_model_path}\")\n",
     "        model = AutoModelForCausalLM.from_pretrained(\n",
     "            local_model_path,\n",
-    "            load_in_low_bit=\"nf4\",\n",
-    "            optimize_model=False,\n",
-    "            torch_dtype=torch.float16,\n",
-    "            modules_to_not_convert=[\"lm_head\"],\n",
+    "            quantization_config=bnb_config,\n",
     "        )\n",
-    "    except OSError as e:\n",
-    "        print(e)\n",
-    "        sys.exit()\n",
-    "        logging.info(\n",
-    "            f\"Model not found locally. Downloading {base_model_id} to cache...\"\n",
-    "        )\n",
+    "        tokenizer_class = LlamaTokenizer if \"llama\" in base_model_id.lower() else AutoTokenizer\n",
+    "        tokenizer = tokenizer_class.from_pretrained(local_model_path)\n",
+    "    except (OSError, PermissionError) as e:\n",
+    "        print(f\"Failed to load from {local_model_path} due to {e}. Attempting to download...\")\n",
     "        model = AutoModelForCausalLM.from_pretrained(\n",
-    "            base_model_id,\n",
-    "            load_in_low_bit=\"nf4\",\n",
-    "            optimize_model=False,\n",
-    "            torch_dtype=torch.float16,\n",
-    "            modules_to_not_convert=[\"lm_head\"],\n",
+    "            base_model_id, \n",
+    "            quantization_config=bnb_config,\n",
     "        )\n",
+    "        tokenizer_class = LlamaTokenizer if \"llama\" in base_model_id.lower() else AutoTokenizer\n",
+    "        tokenizer = tokenizer_class.from_pretrained(base_model_id)\n",
     "\n",
-    "    try:\n",
-    "        if \"llama\" in base_model_id.lower():\n",
-    "            tokenizer = LlamaTokenizer.from_pretrained(local_model_path)\n",
-    "        else:\n",
-    "            tokenizer = AutoTokenizer.from_pretrained(local_model_path)\n",
-    "    except OSError:\n",
-    "        logging.info(\n",
-    "            f\"Tokenizer not found locally. Downloading tokenizer for {base_model_id} to cache...\"\n",
-    "        )\n",
-    "        if \"llama\" in base_model_id.lower():\n",
-    "            tokenizer = LlamaTokenizer.from_pretrained(base_model_id)\n",
-    "        else:\n",
-    "            tokenizer = AutoTokenizer.from_pretrained(base_model_id)\n",
     "    tokenizer.pad_token_id = 0\n",
     "    tokenizer.padding_side = \"left\"\n",
-    "    return model, tokenizer"
+    "    return model, tokenizer\n",
+    "\n"
    ]
   },
   {
@@ -455,7 +430,7 @@
     "Finally, the `train_model` method orchestrates the training process, setting up the `Trainer` with the correct datasets, training arguments, and data collator. The fine-tuning process is encapsulated within the `finetune` method, which strings together all the previous steps into a coherent pipeline, from model setup to training execution.\n",
     "\n",
     "**Using QLoRA for Efficient Fine-Tuning**\n",
-    "1. Load a pretrained model (e.g., LLaMA) in low precision with `load_in_low_bit=\"nf4\"` for 4-bit quantized weights.\n",
+    "1. Load a pretrained model (e.g., LLaMA2) in low precision with ` bnb_4bit_quant_type=\"nf4\"` for 4-bit quantized weights.\n",
     "2. Prepare the quantized model with `prepare_model(model)`, handling weight quantization.\n",
     "3. Add LoRA adapters via `get_peft_model(model, config)` for setting adapter parameters.\n",
     "4. Fine-tune with `Trainer`, focusing gradients on adapters while keeping base model weights fixed.\n",
@@ -550,11 +525,10 @@
     "                tokenized[\"labels\"] = [-100] * user_prompt_len + tokenized[\"labels\"][\n",
     "                    user_prompt_len:\n",
     "                ]\n",
-    "\n",
     "            return tokenized\n",
     "        except Exception as e:\n",
     "            logging.error(\n",
-    "                f\"Error in batch tokenization: {e}, Line: {e.__traceback__.tb_lineno}\"\n",
+    "                f\"Error in batch tokenization: {e}\"\n",
     "            )\n",
     "            raise e\n",
     "\n",
@@ -569,7 +543,7 @@
     "            return train_data, val_data\n",
     "        except Exception as e:\n",
     "            logging.error(\n",
-    "                f\"Error in preparing data: {e}, Line: {e.__traceback__.tb_lineno}\"\n",
+    "                f\"Error in preparing data: {e}\"\n",
     "            )\n",
     "            raise e\n",
     "\n",
@@ -584,6 +558,7 @@
     "        \"\"\"\n",
     "        try:\n",
     "            self.model = self.model.to(self.device)\n",
+    "            self.model.gradient_checkpointing_enable()\n",
     "            self.model = prepare_model(self.model)\n",
     "            self.model = get_peft_model(self.model, LORA_CONFIG)\n",
     "            trainer = Trainer(\n",
@@ -599,7 +574,8 @@
     "                ),\n",
     "            )\n",
     "            self.model.config.use_cache = False\n",
-    "            trainer.train()\n",
+    "            results = trainer.train()\n",
+    "            #print(results)\n",
     "            self.model.save_pretrained(self.model_path)\n",
     "        except Exception as e:\n",
     "            logging.error(f\"Error in model training: {e}\")\n",
@@ -665,7 +641,7 @@
    },
    "outputs": [],
    "source": [
-    "ENABLE_WANDB = False\n",
+    "ENABLE_WANDB = True\n",
     "\n",
     "def lets_finetune(\n",
     "    device=DEVICE,\n",
@@ -721,6 +697,7 @@
     "            learning_rate=learning_rate,\n",
     "            #max_grad_norm=max_grad_norm,\n",
     "            bf16=True,\n",
+    "            use_ipex=True,\n",
     "            #lr_scheduler_type=\"cosine\",\n",
     "            load_best_model_at_end=True,\n",
     "            ddp_find_unused_parameters=False,\n",
@@ -732,7 +709,6 @@
     "            logging_dir=\"./logs\",\n",
     "            report_to=\"wandb\" if ENABLE_WANDB else [],\n",
     "        )\n",
-    "\n",
     "        # Start fine-tuning\n",
     "        finetuner.finetune(DATA_PATH, training_args)\n",
     "    except Exception as e:\n",
@@ -758,15 +734,15 @@
    },
    "outputs": [],
    "source": [
-    "#print(\"installing wandb...\")\n",
-    "#!{sys.executable} -m pip install -U --force wandb==0.15.12 > /dev/null 2>&1\n",
-    "#print(\"installation complete...\")\n",
-    "#import wandb\n",
+    "if ENABLE_WANDB:\n",
+    "    print(\"installing wandb...\")\n",
+    "    !{sys.executable} -m pip install -U --force \"wandb==0.15.12\" > /dev/null 2>&1\n",
+    "    print(\"installation complete...\")\n",
     "\n",
-    "#os.environ[\"WANDB_PROJECT\"] = f\"text-to-sql-finetune-model-name_{BASE_MODEL.replace('/', '_')}\"\n",
-    "#wandb.login()\n",
-    "\n",
-    "#ENABLE_WANDB = True"
+    "    import wandb\n",
+    "    os.environ[\"WANDB_PROJECT\"] = f\"text-to-sql-finetune-model-name_{BASE_MODEL.replace('/', '_')}\"\n",
+    "    os.environ[\"WANDB_LOG_MODEL\"] = \"checkpoint\"\n",
+    "    wandb.login()"
    ]
   },
   {
@@ -843,7 +819,7 @@
    "outputs": [],
    "source": [
     "os.environ[\"WANDB_DISABLED\"] = \"true\"\n",
-    "INFERENCE_DEVICE = torch.device(\"cpu\")  # change this to `xpu` to use Intel GPU for inference  \n",
+    "INFERENCE_DEVICE = torch.device(\"xpu\")  # change this to `xpu` to use Intel GPU for inference  \n",
     "\n",
     "def generate_prompt_sql(input_question, context, output=\"\"):\n",
     "    \"\"\"\n",
@@ -872,49 +848,37 @@
     "\n",
     "\n",
     "def setup_model_and_tokenizer(base_model_id: str):\n",
-    "    \"\"\"Downloads / Load the pre-trained model in 4bit and tokenizer based on the given base model ID for inference.\"\"\"\n",
+    "    \"\"\"Downloads / Loads the pre-trained model and tokenizer in nf4 based on the given base model ID for training, \n",
+    "    with fallbacks for permission errors to use default cache.\"\"\"\n",
     "    local_model_id = base_model_id.replace(\"/\", \"--\")\n",
     "    local_model_path = os.path.join(MODEL_CACHE_PATH, local_model_id)\n",
-    "    print(f\"local model path is: {local_model_path}\")\n",
     "\n",
+    "    bnb_config = BitsAndBytesConfig(\n",
+    "        load_in_4bit=True,\n",
+    "        bnb_4bit_use_double_quant=False,\n",
+    "        bnb_4bit_quant_type=\"nf4\",\n",
+    "        bnb_4bit_compute_dtype=torch.bfloat16\n",
+    "    )\n",
     "    try:\n",
+    "        print(f\"Attempting to load model and tokenizer from: {local_model_path}\")\n",
     "        model = AutoModelForCausalLM.from_pretrained(\n",
     "            local_model_path,\n",
-    "            load_in_4bit=True,\n",
-    "            optimize_model=True,\n",
-    "            use_cache=True,\n",
-    "            torch_dtype=torch.float16,\n",
-    "            modules_to_not_convert=[\"lm_head\"],\n",
-    "        )\n",
-    "    except OSError:\n",
-    "        logging.info(\n",
-    "            f\"Model not found locally. Downloading {base_model_id} to cache...\"\n",
-    "        )\n",
+    "            quantization_config=bnb_config\n",
+    "            )\n",
+    "        tokenizer_class = LlamaTokenizer if \"llama\" in base_model_id.lower() else AutoTokenizer\n",
+    "        tokenizer = tokenizer_class.from_pretrained(local_model_path)\n",
+    "    except (OSError, PermissionError) as e:\n",
+    "        print(f\"Failed to load from {local_model_path} due to {e}. Attempting to download...\")\n",
     "        model = AutoModelForCausalLM.from_pretrained(\n",
-    "            local_model_path,\n",
-    "            load_in_4bit=True,\n",
-    "            optimize_model=True,\n",
-    "            use_cache=True,\n",
-    "            torch_dtype=torch.float16,\n",
-    "            modules_to_not_convert=[\"lm_head\"],\n",
-    "        )\n",
+    "            base_model_id, \n",
+    "            quantization_config=bnb_config\n",
+    "            )\n",
+    "        tokenizer_class = LlamaTokenizer if \"llama\" in base_model_id.lower() else AutoTokenizer\n",
+    "        tokenizer = tokenizer_class.from_pretrained(base_model_id)\n",
     "\n",
-    "    try:\n",
-    "        if \"llama\" in base_model_id.lower():\n",
-    "            tokenizer = LlamaTokenizer.from_pretrained(local_model_path)\n",
-    "        else:\n",
-    "            tokenizer = AutoTokenizer.from_pretrained(local_model_path)\n",
-    "    except OSError:\n",
-    "        logging.info(\n",
-    "            f\"Tokenizer not found locally. Downloading tokenizer for {base_model_id} to cache...\"\n",
-    "        )\n",
-    "        if \"llama\" in base_model_id.lower():\n",
-    "            tokenizer = LlamaTokenizer.from_pretrained(base_model_id)\n",
-    "        else:\n",
-    "            tokenizer = AutoTokenizer.from_pretrained(base_model_id)\n",
     "    tokenizer.pad_token_id = 0\n",
     "    tokenizer.padding_side = \"left\"\n",
-    "    return model, tokenizer\n",
+    "    return model.to(INFERENCE_DEVICE), tokenizer\n",
     "\n",
     "class TextToSQLGenerator:\n",
     "    \"\"\"Handles SQL query generation for a given text prompt.\"\"\"\n",
@@ -1020,7 +984,7 @@
     "    use_adapter=False,\n",
     "    lora_checkpoint=\"\",\n",
     ")  # setting use_adapter=False to use the base model\n",
-    "finetuned_model = None # comment out finetuned_model if you dont want to cache the finetuned model"
+    "finetuned_model = None"
    ]
   },
   {
@@ -1037,8 +1001,6 @@
     "import json\n",
     "\n",
     "from IPython.display import display, HTML\n",
-    "\n",
-    "INFERENCE_DEVICE = torch.device(\"cpu\")  \n",
     "\n",
     "\n",
     "# let's use some fake sample data\n",
@@ -1092,9 +1054,6 @@
     "            display(HTML(tabbed_output))\n",
     "        except Exception as e:\n",
     "            logging.error(f\"Exception occurred during sample processing: {e}\")\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "# checkpoints are saved to `./lora_adapters`.\n",
     "# Update the USING_CHECKPOINT to the one you want to use.\n",
@@ -1188,9 +1147,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch-gpu",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-gpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1202,7 +1161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
