--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -43,14 +43,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "68c4ee2d-e6ca-4c63-b65c-340015386d87",
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Installation in progress...\n",
+      "Installtion complete...\n"
+     ]
+    }
+   ],
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
     "!echo \"Installation in progress...\"\n",
@@ -67,13 +76,13 @@
     "#     ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
     "import sys\n",
     "!{sys.executable} -m pip install invisible-watermark --user > /dev/null 2>&1 \n",
-    "!{sys.executable} -m pip install transformers huggingface-hub --user > /dev/null 2>&1\n",
+    "#!{sys.executable} -m pip install transformers huggingface-hub --user > /dev/null 2>&1\n",
     "!echo \"Installtion complete...\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0fe0f41a-baea-4cdf-ac53-be8700eea3e0",
    "metadata": {
     "jupyter": {
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "31324959-3ade-40d7-bbf5-feb885d931f4",
    "metadata": {
     "editable": true,
@@ -229,9 +238,8 @@
     "        #print(\"Model loaded.\")\n",
     "        return pipeline\n",
     "\n",
-    "    def _optimize_pipeline(\n",
-    "        self, pipeline: StableDiffusionImg2ImgPipeline\n",
-    "    ) -> StableDiffusionImg2ImgPipeline:\n",
+    "    \n",
+    "    def _optimize_pipeline(self, pipeline: StableDiffusionImg2ImgPipeline) -> StableDiffusionImg2ImgPipeline:\n",
     "        \"\"\"\n",
     "        Optimize the pipeline of the model.\n",
     "\n",
@@ -241,17 +249,21 @@
     "        Returns:\n",
     "            StableDiffusionImg2ImgPipeline: The optimized pipeline.\n",
     "        \"\"\"\n",
+    "\n",
     "        for attr in dir(pipeline):\n",
-    "            if isinstance(getattr(pipeline, attr), nn.Module):\n",
-    "                setattr(\n",
-    "                    pipeline,\n",
-    "                    attr,\n",
-    "                    ipex.optimize(\n",
-    "                        getattr(pipeline, attr).eval(),\n",
-    "                        dtype=pipeline.text_encoder.dtype,\n",
-    "                        inplace=True,\n",
-    "                    ),\n",
-    "                )\n",
+    "            try:\n",
+    "                if isinstance(getattr(pipeline, attr), nn.Module):\n",
+    "                    setattr(\n",
+    "                        pipeline,\n",
+    "                        attr,\n",
+    "                        ipex.optimize(\n",
+    "                            getattr(pipeline, attr).eval(),\n",
+    "                            dtype=pipeline.text_encoder.dtype,\n",
+    "                            inplace=True,\n",
+    "                        ),\n",
+    "                    )\n",
+    "            except AttributeError:\n",
+    "                pass\n",
     "        return pipeline\n",
     "\n",
     "    def optimize_pipeline(self) -> None:\n",
@@ -397,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e012d657-7fe4-426e-bdeb-033701a38a52",
    "metadata": {
     "jupyter": {
@@ -579,17 +591,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "39941920-7519-4dd3-8e59-37c8f1389dd1",
    "metadata": {
     "editable": true,
-    "scrolled": true,
     "slideshow": {
      "slide_type": ""
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "99b7064043994ec8acfe66e26f093942",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Dropdown(description='Model:', options=('runwayml/stable-diffusion-v1-5', 'stabi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f918ca1e92894356bf3e5174c1402022",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='Prompt:', layout=Layout(width='57.5%'), placeholder='Enter your prompt')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48e0834b880f4ae18d911649c683e12b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='primary', description='Generate Images!', layout=Layout(margin='35px'), style=ButtonStyle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "212bd39aabd44260a96a10c2dbf928d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Run all cells before running this section and wait a few seconds for UI to load\n",
     "image_to_image()"
@@ -647,9 +715,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch-gpu",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-gpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -661,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
