--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "791c50f9-4524-4410-8ff9-2c55dc674950",
    "metadata": {
     "jupyter": {
@@ -60,7 +60,7 @@
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
     "# #import sys\n",
-    "!echo \"Installation in progress...\"\n",
+    "#!echo \"Installation in progress...\"\n",
     "# !conda install -y --quiet  --prefix {sys.prefix} -c conda-forge \\\n",
     "#     accelerate==0.23.0 \\\n",
     "#     validators==0.22.0 \\\n",
@@ -69,15 +69,15 @@
     "#     pillow \\\n",
     "#     ipywidgets \\\n",
     "#     ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
-    "import sys\n",
-    "!{sys.executable} -m pip install invisible-watermark --user > /dev/null 2>&1\n",
-    "!{sys.executable} -m pip install transformers huggingface-hub --user > /dev/null 2>&1\n",
-    "!echo \"Installation complete...\""
+    "#import sys\n",
+    "#!{sys.executable} -m pip install invisible-watermark --user > /dev/null 2>&1\n",
+    "#!{sys.executable} -m pip install transformers huggingface-hub --user > /dev/null 2>&1\n",
+    "#!echo \"Installation complete...\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ee25d6c0-1c17-4497-bd74-f7795887d7e2",
    "metadata": {
     "jupyter": {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "be12d985-31b5-4a03-b976-74787558fc0f",
    "metadata": {
     "editable": true,
@@ -253,16 +253,19 @@
     "        \"\"\"\n",
     "\n",
     "        for attr in dir(pipeline):\n",
-    "            if isinstance(getattr(pipeline, attr), nn.Module):\n",
-    "                setattr(\n",
-    "                    pipeline,\n",
-    "                    attr,\n",
-    "                    ipex.optimize(\n",
-    "                        getattr(pipeline, attr).eval(),\n",
-    "                        dtype=pipeline.text_encoder.dtype,\n",
-    "                        inplace=True,\n",
-    "                    ),\n",
-    "                )\n",
+    "            try:\n",
+    "                if isinstance(getattr(pipeline, attr), nn.Module):\n",
+    "                    setattr(\n",
+    "                        pipeline,\n",
+    "                        attr,\n",
+    "                        ipex.optimize(\n",
+    "                            getattr(pipeline, attr).eval(),\n",
+    "                            dtype=pipeline.text_encoder.dtype,\n",
+    "                            inplace=True,\n",
+    "                        ),\n",
+    "                    )\n",
+    "            except AttributeError:\n",
+    "                pass\n",
     "        return pipeline\n",
     "\n",
     "    def warmup_model(self):\n",
@@ -360,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0f41a449-ae30-4853-a2b5-d34b6cbdbc9a",
    "metadata": {
     "jupyter": {
@@ -548,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "df8d6b65-39b9-4472-b6a6-878e4c2cefdc",
    "metadata": {
     "editable": true,
@@ -557,7 +560,50 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4e6cf37d52fe421a95ceb619b9518d5e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(HBox(children=(Dropdown(description='Model:', layout=Layout(width='70%'), option…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f72e69cf76214aeeaf9897a8ff6c7517",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='primary', description='Generate Images!', layout=Layout(margin='0 0 0 400px'), style=Butt…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df2a49f263914dfb856c18d1db1ca6b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Run all cells before running this section and wait a few seconds for UI to load\n",
     "prompt_to_image()"
@@ -664,9 +710,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch-gpu",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-gpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -678,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
