--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -715,9 +715,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python-gpu",
    "language": "python",
-   "name": "python3"
+   "name": "python-gpu"
   },
   "language_info": {
    "codemirror_mode": {
