--- a/LLM_finetuning.ipynb
+++ b/LLM_finetuning.ipynb
@@ -1147,9 +1147,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python-gpu",
    "language": "python",
-   "name": "python3"
+   "name": "python-gpu"
   },
   "language_info": {
    "codemirror_mode": {
