--- a/crash_course_llms.ipynb
+++ b/crash_course_llms.ipynb
@@ -1029,9 +1029,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pytorch-gpu",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch-gpu"
   },
   "language_info": {
    "codemirror_mode": {
